After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775791 - waylandsink: lost display when playing a video playlist
waylandsink: lost display when playing a video playlist
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.10.x
Other Linux
: Normal normal
: 1.11.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-08 08:52 UTC by Fabien Dessenne
Modified: 2017-01-03 00:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix display re-connection (1.59 KB, patch)
2016-12-08 09:27 UTC, Fabien Dessenne
committed Details | Review

Description Fabien Dessenne 2016-12-08 08:52:05 UTC
Play a video playlist: after a while, when switching to the next video, the wayland window disappears. (occurence # 1/10)

gst-play-1.0 /f.3gp /f.3gp /f.3gp /f.3gp /f.3gp /f.3gp /f.3gp /f.3gp

Hit ">" to switch to next video to reproduce the issue.
Comment 1 Fabien Dessenne 2016-12-08 09:27:16 UTC
Created attachment 341598 [details] [review]
Fix display re-connection

Proposed fix attached
Comment 2 Nicolas Dufresne (ndufresne) 2016-12-08 20:13:35 UTC
Review of attachment 341598 [details] [review]:

Make sense to me.
Comment 3 Nicolas Dufresne (ndufresne) 2017-01-03 00:53:52 UTC
as e2fba4003863edb39ecd779204818497bbddb652